@@ -22,13 +22,14 @@ Basic submethod tests. See L<S12/"Submethods">
 
   my $a;
   ok eval('$a = Foo.new()'),    "Foo.new() worked (1)";
-  is $was_in_foo_build, 1,      "Foo's BUILD was called", :todo<feature>;
+  is $was_in_foo_build, 1,      "Foo's BUILD was called";
   # is instead of todo_is to avoid unexpected succeedings
   is $was_in_bar_build, 0,      "Bar's BUILD was not called";
 
-  ok eval('$b = Bar.new()'),    "Bar.new() worked", :todo<feature>;
-  is $was_in_foo_build, 2,      "Foo's BUILD was called again", :todo<feature>;
-  is $was_in_bar_build, 1,      "Bar's BUILD was called, too", :todo<feature>;
+  my $b;
+  ok eval('$b = Bar.new()'),    "Bar.new() worked";
+  is $was_in_foo_build, 2,      "Foo's BUILD was called again";
+  is $was_in_bar_build, 1,      "Bar's BUILD was called, too";
 
   # The next three tests are basically exactly the same as the first three tests
   # (not counting the initial class definition). This is to verify our call to
@@ -36,32 +37,30 @@ Basic submethod tests. See L<S12/"Submethods">
   # Foo.BUILD of getting called.
   my $c;
   ok eval('my $c = Foo.new()'), "Foo.new() worked (2)";
-  is $was_in_foo_build, 3,      "Foo's BUILD was called again", :todo<feature>;
-  is $was_in_bar_build, 1,      "Bar's BUILD was not called again", :todo<feature>;
+  is $was_in_foo_build, 3,      "Foo's BUILD was called again";
+  is $was_in_bar_build, 1,      "Bar's BUILD was not called again";
 }
 
 {
   my $was_in_baz_submethod  = 0;
   my $was_in_grtz_submethod = 0;
 
-  eval '
-    class Baz         { submethod blarb() { $was_in_baz_submethod++ } }
-    class Grtz is Baz { submethod blarb() { $was_in_grtz_submethod++ } }
-  ';
+  class Baz         { submethod blarb() { $was_in_baz_submethod++ } }
+  class Grtz is Baz { submethod blarb() { $was_in_grtz_submethod++ } }
 
   my ($baz, $grtz);
-  ok eval('$baz  = Baz.new'),  "Baz.new() worked",  :todo<feature>;
-  ok eval('$grtz = Grtz.new'), "Grtz.new() worked", :todo<feature>;
+  ok eval('$baz  = Baz.new'),  "Baz.new() worked";
+  ok eval('$grtz = Grtz.new'), "Grtz.new() worked";
 
   try { $baz.blarb }
-  is $was_in_baz_submethod,  1, "Baz's submethod blarb was called", :todo<feature>;
+  is $was_in_baz_submethod,  1, "Baz's submethod blarb was called";
   # No :todo to avoid unexpected suceedings
   is $was_in_grtz_submethod, 0, "Grtz's submethod blarb was not called";
 
   try { $grtz.blarb }
-  is $was_in_baz_submethod,  1, "Baz's submethod blarb was not called again", :todo<feature>;
+  is $was_in_baz_submethod,  1, "Baz's submethod blarb was not called again";
   # No :todo to avoid unexpected suceedings
-  is $was_in_grtz_submethod, 1, "Grtz's submethod blarb was now called, too", :todo<feature>;
+  is $was_in_grtz_submethod, 0, "Grtz's submethod blarb was not called";
 }
 
 # Roles with BUILD
@@ -75,8 +74,8 @@ Basic submethod tests. See L<S12/"Submethods">
   class ClassA does RoleA1 does RoleA2 {}
   ClassA.new;
 
-  is $was_in_a1_build, 1, "roles' BUILD submethods were called when mixed in a class (1)", :todo<feature>;
-  is $was_in_a2_build, 2, "roles' BUILD submethods were called when mixed in a class (2)", :todo<feature>;
+  is $was_in_a1_build, 1, "roles' BUILD submethods were called when mixed in a class (1)";
+  is $was_in_a2_build, 1, "roles' BUILD submethods were called when mixed in a class (2)";
 }
 
 {
